fixed font size of a text on small device

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -68,12 +68,21 @@ body {
     height: inherit;
     .mimic {
       font-size: 3.5rem;
+      @media screen and (min-width: 1585px) {
+        font-size: 1.5rem;
+      }
+      @media screen and (max-width: 600px) {
+        font-size: 2.7rem;
+      }
     }
     .web-developer {
       font-weight: lighter;
       font-style: italic;
       color: $color-one;
       font-size: 2rem;
+      @media screen and (max-width: 600px) {
+        font-size: 1.5rem;
+      }
     }
   }
 }
@@ -168,8 +177,6 @@ img:hover {
   @media screen and (min-width: 1585px) {
     width: 100%;
     max-width: 34.37rem;
-    object-fit: cover;
-    height: 34.37rem;
   }
 }
 
